# nanoserde

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs  parse.rs  serde_bin.rs  serde_json.rs  serde_ron.rs  shared.rs
src/: lib.rs  serde_bin.rs  serde_json.rs  serde_ron.rs  toml.rs
tests/: bin.rs  json.rs  parse.rs  ron.rs  ser_de.rs  toml.rs
