[package]
name = "nanoserde"
version = "0.2.1"
authors = ["makepad <info@makepad.nl>", "Fedor <not.fl3@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """Serialization library with zero dependencies.
Supports Binary, JSON, RON and TOML."""
edition = "2021"
rust-version = "1.81.0"
repository = "https://github.com/not-fl3/nanoserde"

[features]
default = ["binary", "json", "ron", "toml", "std"]

binary = ["dep:nanoserde-derive", "nanoserde-derive/binary"]
json = ["dep:nanoserde-derive", "nanoserde-derive/json"]
ron = ["dep:nanoserde-derive", "nanoserde-derive/ron"]
toml = []

std = []

[dependencies]
nanoserde-derive = { path = "derive", version = "=0.2.1", optional = true }
